# NEATer

./: .gitignore  LayeredNEAT.ipynb  NeuroKeras.ipynb  README.md  mkdocs.yml  requirements.txt  setup.py  test.py
.github/workflows/: python-package.yml
docs/: conf.py  getting-started.md  index.md  index.rst  neat.md
neat/: __init__.py  agent.py  genome.py  network.py  network_pool.py
neat/ext/: CMakeLists.txt  Genome.cpp  Genome.h  Network.cpp  Network.h  Species.cpp  ext.cpp  main.cpp  neatc.cpp
neat/ext/genes/: EdgeGene.cpp  EdgeGene.h  NodeGene.cpp  NodeGene.h
neat/ext/graph/include/: Edge.h  InputNode.h  Node.h
neat/ext/graph/src/: Edge.cpp  InputNode.cpp  Node.cpp
neat/ext/network/: Network.cpp
neat/ext/network/graph/include/: Edge.h  InputNode.h  Node.h
neat/layers/: activation.py  layer.py
neat/strategies/: __init__.py  strategy.py
neat/strategies/dense_neat/: dense_neat.py  sparse_neat.py
neat/strategies/neat/: __init__.py  genes.py  genome.py  individual.py  neat.py  network.py  species.py
neat/visualize/: plot.py
neater/: __init__.py  agent.py  network.py
neater/ext/: Genome.cpp  Genome.h  Species.h  ext.cpp  main.cpp
neater/ext/genes/: EdgeGene.cpp  EdgeGene.h  NodeGene.cpp  NodeGene.h
neater/ext/network/: Network.cpp  Network.h
neater/layers/: activation.py  layer.py
neater/strategies/: __init__.py  strategy.py
neater/strategies/dense_neat/: dense_neat.py  sparse_neat.py
neater/strategies/neat/: __init__.py  genome.py  neat.py  species.py
tests/: c_genome_test.py  c_network_test.py  saving_test.py
(+9 files in other folders)
